--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <h1>JEN Stack Example</h1>
-    <button id='testGetButton'>testGet</button>
-    <button id='testPostButton'>testPost</button>
+    <button id='testGetButton'>Test Get</button>
+    <button id='testPostButton'>Submit Event</button>
+    <input type="text" id ="eventName" placeholder="Event Name">
+    <input type="text" id= "athleteName" placeholder="Athlete Name">
+    <input type="text" id = "award" placeholder="Award">
+    <div id= 'container'></div>
   </body>
 </html>
